Fix null SPDX license ID and printing of license statistics (#1112)